# smtm

./: .gitmodules  CMakeLists.txt  README.md  conanfile.txt
example/: fallout2.lua  hotkey.lua
src/: getopt.h  inih.h  logging.cpp  logging.h  lsmtmlib.cpp  lsmtmlib.h  lua.h  lua_engine.cpp  lua_engine.h  lwinconst.cpp  lwinlib.cpp  lwinlib.h  main.cpp  smtm_default.ini
win/: .gitignore  smtmVC140.sln
win/VC140/: getopt.vcxproj  inih.vcxproj  lua.vcxproj  lua.vcxproj.filters  smtm.vcxproj  smtm.vcxproj.filters
